<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clasificasas</string>
    <string name="home_usuario">Usuario</string>
    <string name="home_contrasena">Contraseña</string>
    <string name="home_buscar">Buscar Casa</string>
    <string name="home_ingresar">Ingresar</string>
    <string name="home_registrarme"><u>Regístrate en Clasificasas</u></string>

    <string name="registrar_nombres">Nombres</string>
    <string name="registrar_apellidos">Apellidos</string>
    <string name="registrar_movil">Móvil</string>
    <string name="registrar_correo">Correo</string>
    <string name="registrar_usuario">Usuario</string>
    <string name="registrar_contrasena">Contraseña</string>
    <string name="registrar_confirmar">Confirmar contraseña</string>
    <string name="registrar">Registro</string>
    <string name="registrar_button">Confirmar</string>

    <string name="usuario_publicar">Publicar Casa</string>
    <string name="usuario_buscar">Buscar Casa</string>

    <string name="buscar">Buscar Casas</string>
    <string name="buscar_avanzada">Búsqueda avanzada</string>
    <string name="buscar_ciudad">Ciudad:</string>
    <string name="buscar_tipo_casa">Buscar en:</string>
    <string name="buscar_presupuesto_label">Presupuesto:</string>
    <string name="buscar_buscar">Buscar Casa</string>
    <string name="buscar_cuartos">Cuartos: </string>
    <string name="buscar_banos">Baños:</string>
    <string name="buscar_pisos">Pisos:</string>
    <string name="buscar_min"></string>
    <string name="buscar_max"></string>
    <string name="buscar_presupuesto">50000</string>

    <string name="publicar_ubicacion">Ubicación: Samanes 3</string>
    <string name="publicar_info">Información:</string>
    <string name="publicar_foto">Agregar fotografías adicionales</string>
    <string name="publicar_costo">$1000</string>
    <string name="publicar_cuartos">4</string>
    <string name="publicar_banos">3</string>
    <string name="publicar_pisos">2</string>
    <string name="publicar_terreno">100</string>
    <string name="publicar_construccion">90</string>
    <string name="publicar_tipo">Alquiler</string>
    <string name="publicar_descripcion">Breve descripción de la casa</string>
    <string name="publicar">Publicar Casa</string>

    <string name="resultados">Resultados</string>
    <string name="resultados_no">No se han encontrado resultados</string>
    <string name="resultados_venta">Venta</string>
    <string name="resultados_alquiler">Alquiler</string>

    <string name="detalle">Más información</string>

    <string name="action_settings">Salir</string>
    <string name="title_activity_publicando">publicando</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="usuario"></string>
    <string name="configuracion">Configuración</string>
    <string name="salir">Salir</string>

</resources>
