<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".main$PlaceholderFragment">

    <Button android:id="@+id/home_buscar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_buscar"
        android:layout_marginTop="3dip"
        android:onClick="sendMessage" />

    <EditText
        android:id="@+id/home_usuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_usuario"
        android:layout_marginTop="150dip"
        android:inputType="text" />
    <EditText
        android:id="@+id/home_contrasena"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_contrasena"
        android:layout_marginTop="200dip"
        android:inputType="text" />

    <Button android:id="@+id/home_ingresar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_ingresar"
        android:layout_marginTop="275dip"
        android:onClick="sendMessage" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="450dip"
        android:background="@android:color/darker_gray"/>

    <Button android:id="@+id/home_registrar"
        android:layout_width="fill_parent"
        android:background="@null"
        android:layout_height="wrap_content"
        android:text="@string/home_registrarme"
        android:layout_marginTop="450dip"
        android:onClick="sendMessage" />

</RelativeLayout>
