<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_ciudad"
            android:textSize="22dp"/>
        <Spinner
            android:id="@+id/buscar_in_ciudad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/buscar_ciudad"
            style="@style/spinner"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_tipo_casa"
            android:layout_marginTop="10dip"
            android:textSize="22dp"/>
        <Spinner
            android:id="@+id/buscar_in_tipo_casa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/buscar_tipo_casa"
            android:textSize="40dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_presupuesto_label"
            android:layout_marginTop="10dip"
            android:textSize="22dp"/>
        <SeekBar
            android:id="@+id/buscar_in_seek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>
        <TextView
            android:id="@+id/buscar_min_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_max"
            android:textSize="22dp"/>
        <TextView
            android:id="@+id/buscar_max_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_max"
            android:gravity="end"
            android:textSize="22dp"
            android:layout_marginTop="-28dip"/>

        <EditText
            android:id="@+id/buscar_presupuesto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_presupuesto"
            android:gravity="center"
            android:textSize="55dp"
            android:layout_marginTop="20dip"
            android:inputType="numberDecimal"/>

        <Button android:id="@+id/buscar_in_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_buscar"
            android:layout_marginTop="40dip"/>
        <Button android:id="@+id/buscar_avanzada"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_avanzada"/>
    </LinearLayout>
</RelativeLayout>