<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <Button android:id="@+id/home_buscar"
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:text="@string/home_buscar"
            android:textSize="@dimen/text"
            android:textColor="@color/btext"
            android:background="@drawable/buttom"/>
        <ImageView
            android:id="@+id/home_imageView1"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_marginTop="100dip"
            android:src="@drawable/ic_action_user" />
        <EditText
            android:id="@+id/home_user"
            android:layout_width="270dip"
            android:layout_height="60dip"
            android:hint="@string/home_usuario"
            android:layout_marginTop="-60dip"
            android:layout_marginLeft="60dip"
            android:textColor="@color/text"
            android:inputType="text"
            android:textSize="@dimen/text"/>
        <ImageView
            android:id="@+id/home_imageView2"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:src="@drawable/ic_action_password" />
        <EditText
            android:id="@+id/home_password"
            android:layout_width="270dip"
            android:layout_height="60dip"
            android:hint="@string/home_contrasena"
            android:layout_marginTop="-60dip"
            android:layout_marginLeft="60dip"
            android:textColor="@color/text"
            android:inputType="textPassword"
            android:textSize="@dimen/text"/>
        <Button android:id="@+id/home_ingresar"
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:text="@string/home_ingresar"
            android:layout_marginTop="10dip"
            android:background="@drawable/buttom"
            android:textColor="@color/btext"
            android:textSize="@dimen/text"/>
        <Button android:id="@+id/home_registrar"
            android:layout_width="fill_parent"
            android:background="@null"
            android:layout_height="wrap_content"
            android:text="@string/home_registrarme"
            android:textColor="#494B4F"
            android:layout_marginTop="128dip"
            android:textSize="@dimen/text"/>
    </LinearLayout>
</RelativeLayout>
